--- a/index.html
+++ b/index.html
@@ -1,38 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>เว็บรายรับรายจ่าย</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Income and Expense Tracker</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>เว็บรายรับรายจ่าย</h1>
-    <form id="expense-form">
-      <input type="text" id="description" placeholder="คำอธิบาย" required>
-      <input type="number" id="amount" placeholder="จำนวนเงิน" required>
-      <select id="type">
-        <option value="income">รายรับ</option>
-        <option value="expense">รายจ่าย</option>
-      </select>
-      <button type="submit">เพิ่ม</button>
-    </form>
-    <h2>รายการ</h2>
-    <table id="expense-table">
-      <thead>
-        <tr>
-          <th>คำอธิบาย</th>
-          <th>จำนวนเงิน</th>
-          <th>ประเภท</th>
-          <th>ลบ</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <h3 id="total">ยอดรวม: 0</h3>
-  </div>
-  <script src="script.js"></script>
+    <div class="container">
+        <h1>Income and Expense Tracker</h1>
+        <input type="text" id="description" placeholder="Description">
+        <input type="number" id="amount" placeholder="Amount">
+        <button onclick="addTransaction()">Add Transaction</button>
+        <h2>Transactions</h2>
+        <ul id="transactionList"></ul>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
