--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <input type="number" id="amount" placeholder="Amount">
         <button id="addTransactionButton">Add Transaction</button>
     </div>
+    <div class="transaction-type">
+        <button id="incomeButton" class="type-button">Income</button>
+        <button id="expenseButton" class="type-button">Expense</button>
+    </div>
     <ul id="transactionList"></ul>
     <script src="script.js"></script>
 </body>
