--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
       <h1>💰 Income & Expense Tracker</h1>
   
       <div class="summary">
-        <div id="income">Income: $0.00</div>
-        <div id="expense">Expense: $0.00</div>
-        <div id="balance">Balance: $0.00</div>
+        <div id="income">Income: ฿0.00</div>
+        <div id="expense">Expense: ฿0.00</div>
+        <div id="balance">Balance: ฿0.00</div>
       </div>
   
       <div class="input-group">
         <input type="text" id="description" placeholder="💬 Description">
-        <input type="number" id="amount" placeholder="💵 Amount">
+        <input type="number" id="amount" placeholder="💵 จำนวนเงิน (บาท)">
         <select id="typeSelector">
           <option value="income">➕ รายรับ</option>
           <option value="expense">➖ รายจ่าย</option>
