--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <option value="expense">➖ รายจ่าย</option>
         </select>
         <button id="addTransactionButton">Add Transaction</button>
+        <button id="exportButton">📁 ส่งออกเป็นไฟล์ CSV</button>
       </div>
   
       <ul id="transactionList"></ul>
